Fix issue with long url horz stretching pages on mobile.

--- a/ISS/static-src/src/post-list/post-list.less
+++ b/ISS/static-src/src/post-list/post-list.less
@@ -64,6 +64,10 @@
     .post-block {
       background-color: @bg_dark;
 
+      .post-body {
+        word-wrap: break-word;
+      }
+
       .post-controls {
         .-display-flex();
         .-flex-direction(row-reverse);
